Bug 1833272 - Handle templated heuristic results in VisitCXXDependentScopeMemberExpr. r=asuth DONTBUILD

Differential Revision: https://phabricator.services.mozilla.com/D178258